Fixed aligning issues on style. Added content.

--- a/style.css
+++ b/style.css
@@ -2,77 +2,99 @@
 
     
 body {
-    font-family: 'Roboto', sans-serif;   
+    font-family: 'Roboto', sans-serif;
+    background-color:azure;   
     }
-    
-.content {
-    margin: auto;
-    max-width: fit-content;
-    font-size: large;
-}
-
-p {
-    margin: auto;
-    max-width: fit-content;
-    font-size: large;
-}
-
-.image {
-    margin: auto;
-    max-width: 30%;
-    width: 300px;
-    height: 175px;
-    margin-top: 50px;
-    margin-bottom: 10px;
-    left: 42%;
-    top:auto;
-    position: relative;
-    border: 2px;
+.box {
+    background-color: whitesmoke;
+    max-width: 40%;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    border-style:inset;
+    border-width: 1px;
     border-color: slategray;
-    border-radius: 5px;
-    border-style: inset; 
+    margin-left: 29%;
+    margin-top: 1%;
+    opacity: 100%;
 }
-
-.image:hover {
-    margin: auto;
-    max-width: auto;
-    width: auto;
-    height: auto;
-    margin-top: 30px;
-    margin-bottom: 150px;
-    left: 35%;
-    size: 100%;
-    position: relative;
-    border: 2px;
+.box:hover {
+    background-color: whitesmoke;
+    max-width: 40%;
+    max-height: 300px;
+    border-style: dotted;
+    border-width: 1px;
     border-color: slategray;
-    border-radius: 5px;
-    border-style: inset; 
-   
+    margin-left: 29%;
+    margin-top: 1%;
+}
+.box2 {
+    background-color: whitesmoke;
+    max-width: 19%;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    border-style:inset;
+    border-width: 1px;
+    border-color: slategray;
+    margin-left: 29%;
+    margin-top: 1%;
+    opacity: 100%;
+}
+.box2:hover {
+    background-color: whitesmoke;
+    max-width: 19%;
+    height: 300px;
+    border-style: dotted;
+    border-width: 1px;
+    border-color: slategray;
+    margin-left: 29%;
+    margin-top: 1%;
+    }
+.box3 {
+    background-color: whitesmoke;
+    max-width: 19%;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    border-style:inset;
+    border-width: 1px;
+    border-color: slategray;
+    margin-left: 50%;
+    margin-top: -0.65%;
+    text-align: center;
+}
+.box3:hover {
+    background-color: whitesmoke;
+    padding-top: 1px;
+    max-width: 19%;
+    height: 300px;
+    border-style: dotted;
+    border-width: 1px;
+    border-color: slategray;
+    margin-left: 50%;
+    margin-top: -0.9%;
 }
 .Bread {
     margin: auto;
     max-width: fit-content;
     font-size: large;
 }
-.FirstText {
+.FirstButton {
     max-width: 960px;
     margin: auto;
     margin-top: 20px;
     margin-bottom: 50px;
-    text-align: center;
-    
-}
+    text-align: center;}
 h1 {
     max-width: 960px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 10px;
     margin-bottom: 50px;
     text-align: center;
-    
-}
+    font-size:120px;
+    color: slategray;
+    font-family: 'Roboto', sans-serif;
+    font-size: 42px;}
   
-  
-  button {
+  .buttona {
     margin: auto;
     max-width:fit-content;
     width: auto;
@@ -84,7 +106,7 @@ h1 {
     margin-right: 40px;
     text-align: center;
     cursor:pointer;
-    background-color: whitesmoke;
+    background-color:whitesmoke;
     color:slategray;
     border: 1px;
     border-color: slategray;
@@ -94,66 +116,107 @@ h1 {
     font-size: 22px;
     transition: height 0.35s, width 0.35s ease;
 }
-button:hover {
+.buttona:hover {
         color: white;
         width: 200px;
         height: 200px;
         font-size: 44px;
         text-transform: uppercase;
         background-image: url(/home/dennis/repos/odin-recipes/pictures/button.png);   
-}
-
-.FirstText:hover {
-    margin: auto;
-    padding-top: 100px;
-    padding-bottom: 50px;
-    text-align: center;
-    font-size: 30px;
-    margin-top: 50px;
-}
-.Bread:hover {
-    margin-right: auto;
-    padding-top: 10px;
-    padding-bottom: 100px;
-    text-align: center;
-    font-size: 35px;
-}
-
-.list {
-    margin-left: 1%;
-    max-width: 40%;
-    margin-top: 0px;
-    border: 1px;
-    border-color: slategray;
-    border-style:dotted;
-    border-radius: 4px;
-}
-.list:hover {
-    margin-left: 1%;
-    font-size: 25px;
-    max-width: 40%;
-    height: fit-content;
-    transition: margin-right 0.35s, height 0.35s, font-size 0.35s, ease-in-out;
-}
-.directions {
-    margin-right: 6%;
-    margin-bottom: -100px;
-    max-width: 40%;
-    border: 1px;
-    border-color: slategray;
-    border-style:dashed;
-    border-radius: 3px;
-    text-align: right;
-    transition: margin-right 0.35s,height 0.35s, font-size 0.35s, ease-in-out;
-
-}   
-.directions:hover {
-    margin-right: 3%;
-    font-size: 35px;
-    text-align: right;
-    transition: margin-right 0.35s, height 0.35s, font-size 0.35s, ease-in-out;
 } 
+.buttonb {
+    background-color: whitesmoke;
+    width: 378px;
+    max-height: 8px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    border-style:inset;
+    border-width: 1px;
+    border-color: slategray;
+    margin-left: 0.5%;
+    margin-top: 10px;
+    text-align: center;
+    transition: height 0.85s, width 0.85s ease;
+    font-size: 0px;
+}
+.buttonb:hover{
+    width: 378px;
+    max-height:fit-content;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    margin-left: 0.5%;
+    margin-top: 10px;
+    text-align: center;
+    cursor:pointer;
+    background-color: whitesmoke;
+    color:slategray;
+    border: 1px;
+    border-color: slategray;
+    border-radius: 1px;
+    border-style:outset;
+    border-width: 1px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    transition: height 0.85s, width 0.85s font-size 0.85s, ease;
+}
+.buttonc {
+    background-color: whitesmoke;
+    width: 376px;
+    max-height: 8px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    border-style:inset;
+    border-width: 1px;
+    border-color: slategray;
+    margin-top: 10px;
+    text-align: center;
+    transition: height 0.85s, width 0.85s ease;
+    font-size: 0px;
+}
+.buttonc:hover{
+    background-color: whitesmoke;
+    width: 376px;
+    max-height: fit-content;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    border-style:outset;
+    border-width: 1px;
+    border-color: slategray;
+    text-align: left;
+    font-size: 22px;
+    font-family: 'Roboto', sans-serif;
+    transition: height 0.85s, width 0.85s ease;
+}
+.imga {
+    max-width: 20%;
+    border-style:dotted;
+    border-width: 1px;
+    border-color: slategray;  
+}
+.imga:hover {
+    max-width:fit-content;
+    border-style:outset;
+    border-width: 1px;
+    border-color: slategray;
+    
+}
 
+.lefttext {
+    font-family: 'Roboto';
+    font-size: 29px;
+    margin-left: -1%;
+    text-align:center;
+    margin-bottom: 0px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+.righttext {
+    font-family: 'Roboto';
+    font-size: 19px;
+    margin-bottom: 0px;
+    text-align:right;
+}
 a:link { text-decoration: none; }
 
 a:visited { text-decoration: none; }
